--- a/app/task2.ipynb
+++ b/app/task2.ipynb
@@ -1737,12 +1737,12 @@
     "pipeline_q8 = [\n",
     "    {\"$match\": {\"crew\": {\"$type\": \"array\"}, \"cast\": {\"$type\": \"array\"}}},\n",
     "\n",
-    "    # Director → Actor\n",
+    "    # director → actor\n",
     "    {\"$unwind\": \"$crew\"},\n",
     "    {\"$match\": {\"crew.job\": {\"$regex\": \"^director$\", \"$options\": \"i\"}}},\n",
     "    {\"$unwind\": \"$cast\"},\n",
     "\n",
-    "    # Claves y limpieza\n",
+    "    # keys and cleaning\n",
     "    {\"$project\": {\n",
     "        \"movie_id\": \"$_id\",\n",
     "        \"director\": \"$crew.name\",\n",
@@ -1753,7 +1753,7 @@
     "        \"actor\": {\"$ne\": None, \"$ne\": \"\"}\n",
     "    }},\n",
     "\n",
-    "    # Lookup por id con cast a int explícito en ambos lados\n",
+    "    # Lookup by id with cast to int explicit on both sides\n",
     "    {\"$lookup\": {\n",
     "        \"from\": \"movies\",\n",
     "        \"let\": {\"cid\": {\"$toInt\": \"$movie_id\"}},\n",
@@ -1766,11 +1766,11 @@
     "    }},\n",
     "    {\"$unwind\": \"$mv\"},\n",
     "\n",
-    "    # Votos (forzar tipo antes de filtrar)\n",
+    "    # Votes (force type before filtering)\n",
     "    {\"$addFields\": {\"vote_count_num\": {\"$toInt\": \"$mv.vote_count\"}}},\n",
     "    {\"$match\": {\"vote_count_num\": {\"$gte\": 100}}},\n",
     "\n",
-    "    # Agregado por par D–A (colaboraciones únicas por película)\n",
+    "    # Group ONLY to feature unique collaborations\n",
     "    {\"$group\": {\n",
     "        \"_id\": {\"director\": \"$director\", \"actor\": \"$actor\"},\n",
     "        \"movie_ids\": {\"$addToSet\": \"$movie_id\"},\n",
@@ -1787,11 +1787,11 @@
     "        }}\n",
     "    }},\n",
     "\n",
-    "    # ≥ 3 colaboraciones\n",
+    "    # >= 3 collaborations\n",
     "    {\"$addFields\": {\"movie_count\": {\"$size\": \"$movie_ids\"}}},\n",
     "    {\"$match\": {\"movie_count\": {\"$gte\": 3}}},\n",
     "\n",
-    "    # Salida\n",
+    "    # output\n",
     "    {\"$project\": {\n",
     "        \"_id\": 0,\n",
     "        \"director\": \"$_id.director\",\n",
@@ -1816,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "29e9a7ce",
    "metadata": {},
    "outputs": [
@@ -1880,7 +1880,7 @@
     "  {\"$addFields\": {\"vote_count_num\": {\"$toInt\": \"$mv.vote_count\"}}},\n",
     "  {\"$match\": {\"vote_count_num\": {\"$gte\": 100}}},\n",
     "\n",
-    "  # 👇 agrupa SOLO para contar colaboraciones únicas\n",
+    "  # Group ONLY to feature unique collaborations\n",
     "  {\"$group\": {\n",
     "      \"_id\": {\"director\": \"$director\", \"actor\": \"$actor\"},\n",
     "      \"movie_ids\": {\"$addToSet\": \"$movie_id\"}\n",
@@ -2107,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "3a883075",
    "metadata": {},
    "outputs": [
@@ -2128,7 +2128,7 @@
     "        \"rating\": {\"$toDouble\": \"$rating\"}\n",
     "    }},\n",
     "    {\"$group\": {\n",
-    "        \"_id\": \"$userId\",                 # _id = userId  ✅\n",
+    "        \"_id\": \"$userId\",                 # _id = userId \n",
     "        \"n_ratings\": {\"$sum\": 1},\n",
     "        \"std_pop\": {\"$stdDevPop\": \"$rating\"},\n",
     "        \"movie_ids\": {\"$addToSet\": \"$movieId\"}\n",
@@ -2195,7 +2195,7 @@
     "    }},\n",
     "    {\"$merge\": {\n",
     "        \"into\": \"user_stats_tmp\",\n",
-    "        \"on\": \"_id\",                   # ✅ stable key (userId)\n",
+    "        \"on\": \"_id\",                   # stable key (userId)\n",
     "        \"whenMatched\": \"merge\",\n",
     "        \"whenNotMatched\": \"discard\"\n",
     "    }}\n",
